# fpc_fw

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  fpc_api.yml  getting_started.md  partitions.csv  sdkconfig  sdkconfig.old
.github/workflows/: build_test.yml
components/common/include/: common_headers.h  constant.h
components/config_manager/: CMakeLists.txt  config_manager.h  read_json.h  validate_json.h
components/config_manager/src/: config_manager.c  read_json.c  validate_json.c
components/config_ui/: config_ui.html
components/crc/: CMakeLists.txt  crc.h
components/current_sensor/: CMakeLists.txt  acs712_current_sensor.h  adc_reader.h  ads1115.h  current_sensor.h  current_sensor_common.h  current_sensor_context.h
components/current_sensor/src/: acs712_current_sensor.c  adc_reader.c  ads1115.c  current_sensor.c  current_sensor_context.c
components/current_sensor/test/: CMakeLists.txt  test_acs712_current_sensor.c  test_adc_reader.c  test_ads1115.c  test_current_sensor.c
components/device_mode/: CMakeLists.txt  device_mode.h  dummy_webserver.h  example.h  task_handle.h
components/device_mode/example/: example_main.c
components/device_mode/src/: device_mode.c  dummy_webserver.c  example.c  task_handle.c
components/emhashmap_wrapper/: CMakeLists.txt
components/event/: CMakeLists.txt
components/event_handler_task/: CMakeLists.txt  event_handler_task.h  queue_handler_wrapper.h
components/file_handler/: CMakeLists.txt  file_handler.h
components/level_sensor/: CMakeLists.txt  level_sensor.h
components/protocol/: CMakeLists.txt  protocol.h
components/pump/: CMakeLists.txt  pump.h
components/pump_control_unit/: CMakeLists.txt  pump_control_unit.h
components/pump_monitor/: CMakeLists.txt  pump_monitor.h
components/pump_monitor_task/: CMakeLists.txt  pump_monitor_task.h
components/relay_driver/: CMakeLists.txt  relay_driver.h
components/rs485/: CMakeLists.txt  rs485.h  rs485_context.h
components/setup_config/: CMakeLists.txt  setup_config.h
components/setup_config/src/: setup_config.c
components/setup_config/test/: CMakeLists.txt  test_setup_config.c
components/setup_config_button/: CMakeLists.txt  setup_config_button.h
components/subscriber_event_task/: CMakeLists.txt  subscriber_event_task.h
components/tank/: CMakeLists.txt  tank.h
components/tank_monitor/: CMakeLists.txt  tank_monitor.h
components/tank_monitor_task/: CMakeLists.txt  example.h  tank_monitor_task.h
components/webserver/: CMakeLists.txt  Kconfig  auth.h  config_handler.h  credential_store.h  frontend_pages_handler.h  login_handler.h  logout_handler.h  register_handler.h  reset_handler.h  session.h  web_server_setup.h  webserver.h  webserver_utils.h
components/webserver/src/: auth.c  config_handler.c  credential_store.c  frontend_pages_handler.c  login_handler.c  logout_handler.c  register_handler.c  reset_handler.c  session.c  webserver.c  webserver_utils.c
components/webserver/test/: CMakeLists.txt  test_webserver.c
components/webserver_task/: CMakeLists.txt  webserver_task.h
components/webserver_task/example/: example.c
components/webserver_task/src/: webserver_task,c  webserver_task.c
components/wifi_hotspot/: CMakeLists.txt  wifi_hotspot.h
frontend/config_ui/: config_ui.html
frontend/css/: ui.css
frontend/html/: config_ui.html  home_ui.html  login_ui.html  register_ui.html
frontend/js/: config_ui.js  home_ui.js  login_ui.js  register_ui.js
frontend/login_ui/: login_ui.css  login_ui.html
main/: CMakeLists.txt  main.c
unity-app/: CMakeLists.txt  partitions.csv  sdkconfig
unity-app/main/: test_app_main.c
(+62 files in other folders)
